WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193988
[Cocoa][EME] Modern EME uses a different path for SecureStop data than Legacy EME
https://bugs.webkit.org/show_bug.cgi?id=193988
Summary
[Cocoa][EME] Modern EME uses a different path for SecureStop data than Legacy...
Jer Noble
Reported
2019-01-29 15:12:40 PST
[Cocoa][EME] Modern EME uses a different path for SecureStop data than Legacy EME
Attachments
Patch
(10.65 KB, patch)
2019-01-29 15:44 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-01-29 15:44:01 PST
Created
attachment 360514
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2019-01-29 15:45:50 PST
<
rdar://problem/47649195
>
EWS Watchlist
Comment 3
2019-01-29 15:46:16 PST
Attachment 360514
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.mm:426: Missing space around : in range-based for statement [whitespace/colon] [4] ERROR: Source/WebCore/platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.mm:485: Missing space around : in range-based for statement [whitespace/colon] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4
2019-01-31 11:52:20 PST
Comment on
attachment 360514
[details]
Patch Clearing flags on attachment: 360514 Committed
r240804
: <
https://trac.webkit.org/changeset/240804
>
WebKit Commit Bot
Comment 5
2019-01-31 11:52:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug